--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="py-20 bg-gray-900">
+<!--     <section id="about" class="py-20 bg-gray-900">
         <div class="container mx-auto px-6 text-center">
             <h2 class="text-4xl font-bold text-white mb-4 animated slide-in-left">About Me</h2>
             <div class="w-20 h-1 bg-cyan-500 mx-auto mb-10 rounded-full animated fade-in"></div>
@@ -196,7 +196,23 @@
                 Hello! I'm Sri Surya Lakshmi Bulusu, a Computer Engineering student at Aditya College of Engineering and Technology. I am currently a trainee at Technical Hub, learning Full-Stack Development with React Native. Outside my technical pursuits, I enjoy reading, listening to music, and discovering new facts about the world.
             </p>
         </div>
-    </section>
+    </section> -->
+
+     <!-- About Section -->
+    <section id="about" class="py-20 bg-gray-900">
+    <div class="container mx-auto px-6 text-center">
+        <h2 class="text-4xl font-bold text-white mb-4 animated slide-in-left">About Me</h2>
+        <div class="w-20 h-1 bg-cyan-500 mx-auto mb-10 rounded-full animated fade-in"></div>
+        <p class="max-w-3xl mx-auto text-lg text-gray-300 animated fade-in">
+            Hello! I'm Sri Surya Lakshmi Bulusu, a Computer Engineering student at Aditya College of Engineering and Technology. I am currently a trainee at Technical Hub, learning Full-Stack Development with React Native. Outside my technical pursuits, I enjoy reading, listening to music, and discovering new facts about the world.
+        </p>
+
+        <a href="./Resume(Sept2025).pdf" download class="inline-block mt-8 px-6 py-3 text-white bg-cyan-500 rounded-full font-bold hover:bg-cyan-600 transition-colors duration-300 animated fade-in download-button">
+            Download My Resume
+        </a>
+
+    </div>
+</section>
 
     <!-- Skills Section -->
     <section id="skills" class="py-20 bg-gray-800">
