--- a/index.html
+++ b/index.html
@@ -303,6 +303,9 @@
                     <h3 class="text-2xl font-semibold text-white mb-2">ProGuide</h3>
                     <p class="text-gray-400 text-sm">A simple and elderly-friendly shopping website that guides users to discounts and compares product prices across multiple shopping platforms.</p>
                     <p class="text-cyan-400 font-medium text-sm mt-4">Tech Stack: HTML, CSS</p>
+                    <a href="https://github.com/SriSurya06/ISHIP-1" class="mt-4 inline-block px-6 py-2 text-white bg-cyan-600 rounded-full hover:bg-cyan-700 transition-colors duration-300 project-link">
+                        ProGuide ->
+                    </a>
                 </div>
 
                 <!-- Project 2 -->
