--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     <h3 class="text-2xl font-semibold text-white mb-2">LearnOha</h3>
                     <p class="text-gray-400 text-sm">A student-friendly platform that balances study and fun. Features include storage for study materials, calendar, basic portfolio maker, to-do list, book-swap corner, and a fun section with quotes, jokes, fun-facts, music, and games.</p>
                     <p class="text-cyan-400 font-medium text-sm mt-4">Tech Stack: HTML, CSS, JavaScript</p>
-                    <a href="https://srisurya06.github.io/ISHIP-1/" class="mt-4 inline-block px-6 py-2 text-white bg-cyan-600 rounded-full hover:bg-cyan-700 transition-colors duration-300 project-link">
+                    <a href="https://srinija-pullipudi.github.io/Learnoha_ISHIP-1/" class="mt-4 inline-block px-6 py-2 text-white bg-cyan-600 rounded-full hover:bg-cyan-700 transition-colors duration-300 project-link">
                         LearnOha ->
                     </a>
                 </div>
