--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             </h1>
             <!-- Typed.js effect -->
             <p class="text-xl md:text-2xl text-gray-400">
-                I'm a <span class="typed-text font-bold" data-typed-items="Computer Engineering Student, Full-Stack Developer, Lifelong Learner"></span>
+                I'm a <span class="typed-text font-bold" data-typed-items="Computer Engineering Student, Full-Stack Developer"></span>
             </p>
             <a href="#projects" class="inline-block mt-4 px-8 py-3 text-lg font-semibold text-white bg-cyan-600 rounded-full shadow-lg hover:bg-cyan-700 transform hover:-translate-y-1 transition-all duration-300">
                 View My Work
@@ -552,7 +552,7 @@
             </p>
             <div class="max-w-xl mx-auto animated fade-in">
                 <div class="flex justify-center space-x-6">
-                    <a href="mailto:23MH1A05F2@acoe.edu.in" class="text-gray-400 hover:text-cyan-400 transition-colors duration-300">
+                    <a href="mailto:srisuryalakshmi.bulusu@gmail.com" class="text-gray-400 hover:text-cyan-400 transition-colors duration-300">
                         <i class="fas fa-envelope fa-2x"></i>
                     </a>
                     <a href="https://www.linkedin.com/in/sri-surya-lakshmi-bulusu-989509291/" class="text-gray-400 hover:text-cyan-400 transition-colors duration-300">
